--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
+    "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
     "textmagic-rest-client": "^1.0.11",
     "twilio": "^3.63.0"
